# crime_dashboard

./: .gitignore  GCP_DEPLOYMENT_GUIDE.md  README.md  alton_crime_map.html  create_crime_map.py  create_crime_map_UK.py  create_heatmap.py  crime_dashboard.md  crime_dashboard.py  get_polygon_from_kml.py  hampshire_crime_dashboard.py  interactive_crime_dashboard.py  map_script.js  wiltshire_crime_dashboard.py
backend/: .dockerignore  Dockerfile  batch_processor.py  crime-data-batch.service  crime-data-batch.timer  main.py  populations.json  pyproject.toml  run_monthly_batch.fish  stats.json  test_zip.py
backend/cache/: __init__.py  base.py  firestore_cache.py  sqlite_cache.py
frontend/: .env.development  .env.production  .firebaserc  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  index.css
frontend/src/components/: HistoricalTrendsScreen.tsx  LayerControls.tsx  Map.tsx  Overview.tsx  SearchBar.tsx  TimeSlider.tsx
frontend/src/lib/: leaflet-heat.js
